--- a/HomePage.html
+++ b/HomePage.html
@@ -10,43 +10,58 @@
       <h1>Welcome to our website</h1>
     </header>
     <nav>
-        <ul>
-          <li><a href="#Description" target="_blank">Description</a></li>
-          <li><a href="#" target="_blank">Goals</a></li>
-          <li>
-            <a href="#" target="_blank">Rules</a>
-          </li>
-          <li>
-            <a href="#" target="_blank">Section</a>
-          </li>
-        </ul>
+      <ul>
+        <li><a href="#Description" target="_blank">Description</a></li>
+        <li><a href="#" target="_blank">Goals</a></li>
+        <li>
+          <a href="#" target="_blank">Rules</a>
+        </li>
+        <li>
+          <a href="#" target="_blank">Section</a>
+        </li>
+      </ul>
     </nav>
     <main>
       <article>
         <h2 id="Description">Description</h2>
-        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Neque, porro quidem numquam quas sapiente voluptatem. Laboriosam, quisquam quibusdam impedit unde similique velit recusandae cumque soluta alias, reiciendis provident repellendus optio enim repudiandae! Voluptatem odit sint natus in quas possimus facilis debitis eaque ipsum, id at ullam hic earum, obcaecati magnam doloribus commodi beatae! Deleniti, quod. Officia.</p>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Rerum pariatur voluptas laborum adipisci tempore veritatis, expedita commodi inventore ut repudiandae itaque quisquam velit. Debitis, vero eum doloremque sint ut cum, blanditiis repellat quod id veritatis, eius voluptas modi! Fugit aspernatur delectus eaque dicta placeat vel earum, quos ex nisi nam itaque accusantium dolorum incidunt cum debitis quas quibusdam.</p>
+        <p>
+          Lorem ipsum, dolor sit amet consectetur adipisicing elit. Neque, porro
+          quidem numquam quas sapiente voluptatem. Laboriosam, quisquam
+          quibusdam impedit unde similique velit recusandae cumque soluta alias,
+          reiciendis provident repellendus optio enim repudiandae! Voluptatem
+          odit sint natus in quas possimus facilis debitis eaque ipsum, id at
+          ullam hic earum, obcaecati magnam doloribus commodi beatae! Deleniti,
+          quod. Officia.
+        </p>
+        <p>
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Rerum
+          pariatur voluptas laborum adipisci tempore veritatis, expedita commodi
+          inventore ut repudiandae itaque quisquam velit. Debitis, vero eum
+          doloremque sint ut cum, blanditiis repellat quod id veritatis, eius
+          voluptas modi! Fugit aspernatur delectus eaque dicta placeat vel
+          earum, quos ex nisi nam itaque accusantium dolorum incidunt cum
+          debitis quas quibusdam.
+        </p>
       </article>
-      
+
       <section>
         <h2></h2>
-        <table id="table">
-        </table>
+        <table id="table"></table>
       </section>
       <hr />
-      
+
       <section>
-        <img src="" alt="">
+        <img src="" alt="" />
         <h3>Description</h3>
         <a href="http://" target="_blank">more</a>
       </section>
       <section>
-        <img src="" alt="">
+        <img src="" alt="" />
         <h3>Goals</h3>
         <a href="http://" target="_blank">more</a>
       </section>
       <section>
-        <img src="" alt="">
+        <img src="" alt="" />
         <h3>Rules</h3>
         <a href="http://" target="_blank">more</a>
       </section>
@@ -67,8 +82,7 @@
           </summary>
           <a href="https://" target="_blank"></a>
           <br />
-          <a href="https://" target="_blank"></a
-          >
+          <a href="https://" target="_blank"></a>
         </details>
       </section>
     </footer>
