--- a/HomePage.html
+++ b/HomePage.html
@@ -4,25 +4,47 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Make a Website</title>
-    <link rel="stylesheet" href="./HomePage.css">
+    <link rel="stylesheet" href="./HomePage.css" />
   </head>
   <body>
     <header id="Header">
       <h1>Welcome to our website</h1>
     </header>
-    <nav>
+    <nav class="nav">
       <ul>
-        <li><a href="#Description" target="_blank">Description</a></li>
-        <li><a href="#" target="_blank">Goals</a></li>
+        <li><a href="#" target="_blank">Home</a></li>
+        <li><a href="#" target="_blank">Make Appointment</a></li>
         <li>
-          <a href="#" target="_blank">Rules</a>
+          <a href="#" target="_blank">Order Food</a>
         </li>
         <li>
-          <a href="#" target="_blank">Section</a>
+          <a href="#" target="_blank">Services</a>
+        </li>
+        <li>
+          <a href="#" target="_blank">About</a>
+        </li>
+        <li>
+          <a href="#" target="_blank">Contact</a>
+        </li>
+        <li>
+          <a href="#" target="_blank">Forms</a>
         </li>
       </ul>
     </nav>
     <main>
+      <div id="first-div">
+        <img id="butterfly-icon" src="butterfly.png" alt="butterfly-icon" />
+        <p id="butterfly-p">September 15, 2023 by</p>
+        <p id="my-name">Shirin Torkamandi</p>
+      </div>
+      <div class="second-div">
+        <hr />
+      </div>
+
+      <section>
+        <!-- <img class="pic" src="https://media.philstar.com/photos/2020/11/05/pets-cats-dogs_2020-11-05_19-55-16.jpg" alt="pets-cats-dogs"> -->
+      </section>
+
       <article>
         <h2 id="Description">Description</h2>
         <p>
