added table + cute icons

--- a/HomePage.html
+++ b/HomePage.html
@@ -12,7 +12,7 @@
     </header>
     <nav class="nav">
       <ul>
-        <li><a href="#" target="_blank">Home</a></li>
+        <li><a href="./HomePage.html" target="_self">Home</a></li>
         <li><a href="#" target="_blank">Make Appointment</a></li>
         <li>
           <a href="#" target="_blank">Order Food</a>
@@ -34,43 +34,36 @@
     <main>
       <div id="first-div">
         <img id="butterfly-icon" src="butterfly.png" alt="butterfly-icon" />
-        <p id="butterfly-p">September 15, 2023 by</p>
+        <p id="butterfly-p">September 15, 2023   by</p>
         <p id="my-name">Shirin Torkamandi</p>
       </div>
       <div class="second-div">
         <hr />
       </div>
 
+      <section class="section-1">
+        <img class="pic" src="https://media.philstar.com/photos/2020/11/05/pets-cats-dogs_2020-11-05_19-55-16.jpg" alt="pets-cats-dogs">
+      </section>
+      <div class="second-div">
+        <hr />
+      </div>
       <section>
-        <!-- <img class="pic" src="https://media.philstar.com/photos/2020/11/05/pets-cats-dogs_2020-11-05_19-55-16.jpg" alt="pets-cats-dogs"> -->
+        <p class="According">According to several pet owners in America, these animals make the best pets for your home:</p>
+
+        <table>
+          <thead>
+            <tr><th>rank:</th><th>Animal:</th></tr>
+          </thead>
+          <tbody>
+            <tr><td>#1</td><td>Dogs<img class="animal-icons" src="./pet.png" alt="dog"></td></tr>
+            <tr><td>#2</td><td>Rabbits<img class="animal-icons" src="./rabbit.png" alt="rabbit"></td></tr>
+            <tr><td>#3</td><td>Cats<img class="animal-icons" src="./cat.png" alt="cat"></td></tr>
+            <tr><td>#4</td><td>Fish<img class="animal-icons" src="./fish-bowl.png" alt="fish"></td></tr>
+            <tr><td>#5</td><td>Tortoises<img class="animal-icons" src="./turtle.png" alt="turtle"></td></tr>
+          </tbody>
+        </table>
       </section>
 
-      <article>
-        <h2 id="Description">Description</h2>
-        <p>
-          Lorem ipsum, dolor sit amet consectetur adipisicing elit. Neque, porro
-          quidem numquam quas sapiente voluptatem. Laboriosam, quisquam
-          quibusdam impedit unde similique velit recusandae cumque soluta alias,
-          reiciendis provident repellendus optio enim repudiandae! Voluptatem
-          odit sint natus in quas possimus facilis debitis eaque ipsum, id at
-          ullam hic earum, obcaecati magnam doloribus commodi beatae! Deleniti,
-          quod. Officia.
-        </p>
-        <p>
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Rerum
-          pariatur voluptas laborum adipisci tempore veritatis, expedita commodi
-          inventore ut repudiandae itaque quisquam velit. Debitis, vero eum
-          doloremque sint ut cum, blanditiis repellat quod id veritatis, eius
-          voluptas modi! Fugit aspernatur delectus eaque dicta placeat vel
-          earum, quos ex nisi nam itaque accusantium dolorum incidunt cum
-          debitis quas quibusdam.
-        </p>
-      </article>
-
-      <section>
-        <h2></h2>
-        <table id="table"></table>
-      </section>
       <hr />
 
       <section>
@@ -103,9 +96,9 @@
           <summary>
             The websites that I get help from to make this website:
           </summary>
-          <a href="https://" target="_blank"></a>
+          <a href="https://autumntrailsvet.com/best-pets-for-your-home/" target="_blank">for Appearance characteristics</a>
           <br />
-          <a href="https://" target="_blank"></a>
+          <a href="https://a-z-animals.com/blog/the-worlds-10-favorite-most-popular-animals/" target="_blank">for Table Structure</a>
         </details>
       </section>
     </footer>
