I added a lots of things.

--- a/HomePage.html
+++ b/HomePage.html
@@ -34,7 +34,7 @@
     <main>
       <div id="first-div">
         <img id="butterfly-icon" src="butterfly.png" alt="butterfly-icon" />
-        <p id="butterfly-p">September 15, 2023   by</p>
+        <p id="butterfly-p">September 15, 2023 by</p>
         <p id="my-name">Shirin Torkamandi</p>
       </div>
       <div class="second-div">
@@ -42,64 +42,156 @@
       </div>
 
       <section class="section-1">
-        <img class="pic" src="https://media.philstar.com/photos/2020/11/05/pets-cats-dogs_2020-11-05_19-55-16.jpg" alt="pets-cats-dogs">
+        <img
+          class="pic"
+          src="https://media.philstar.com/photos/2020/11/05/pets-cats-dogs_2020-11-05_19-55-16.jpg"
+          alt="pets-cats-dogs"
+        />
       </section>
       <div class="second-div">
         <hr />
       </div>
       <section>
-        <p class="According">According to several pet owners in America, these animals make the best pets for your home:</p>
+        <p class="According">
+          According to several pet owners in America, these animals make the
+          best pets for your home:
+        </p>
 
         <table>
           <thead>
-            <tr><th>rank:</th><th>Animal:</th></tr>
+            <tr>
+              <th>rank:</th>
+              <th>Animal:</th>
+            </tr>
           </thead>
           <tbody>
-            <tr><td>#1</td><td>Dogs<img class="animal-icons" src="./pet.png" alt="dog"></td></tr>
-            <tr><td>#2</td><td>Rabbits<img class="animal-icons" src="./rabbit.png" alt="rabbit"></td></tr>
-            <tr><td>#3</td><td>Cats<img class="animal-icons" src="./cat.png" alt="cat"></td></tr>
-            <tr><td>#4</td><td>Fish<img class="animal-icons" src="./fish-bowl.png" alt="fish"></td></tr>
-            <tr><td>#5</td><td>Tortoises<img class="animal-icons" src="./turtle.png" alt="turtle"></td></tr>
+            <tr>
+              <td>#1</td>
+              <td>
+                Dogs<img class="animal-icons" src="./pet.png" alt="dog" />
+              </td>
+            </tr>
+            <tr>
+              <td>#2</td>
+              <td>
+                Rabbits<img
+                  class="animal-icons"
+                  src="./rabbit.png"
+                  alt="rabbit"
+                />
+              </td>
+            </tr>
+            <tr>
+              <td>#3</td>
+              <td>
+                Cats<img class="animal-icons" src="./cat.png" alt="cat" />
+              </td>
+            </tr>
+            <tr>
+              <td>#4</td>
+              <td>
+                Fish<img
+                  class="animal-icons"
+                  src="./fish-bowl.png"
+                  alt="fish"
+                />
+              </td>
+            </tr>
+            <tr>
+              <td>#5</td>
+              <td>
+                Tortoises<img
+                  class="animal-icons"
+                  src="./turtle.png"
+                  alt="turtle"
+                />
+              </td>
+            </tr>
           </tbody>
         </table>
       </section>
+      <div class="second-div">
+        <hr />
+      </div>
+      <article>
+        <p id="Owning">
+          Owning a pet has multiple perks – it gives you a sense of
+          companionship, makes you more responsible, and provides emotional
+          support. However, before you decide to own a pet, you should weigh the
+          pros and cons and make an informed decision as pet ownership comes
+          with a lot of responsibilities and is a lifelong commitment.
+        </p>
+        <p id="should">
+          You should remember that not all animals are meant to be domestic
+          pets. Making the right choice of the animal as a pet is quite
+          important. In this article, we bring to you a list of all the animals
+          that make up for wonderful pets.
+        </p>
+      </article>
 
-      <hr />
+      <div id="big-div">
+        <section id="big-div" class="card">
+          <img class="cards-photo" src="./bird.png" alt="bird" />
+          <h3>Birds</h3>
+          <a href="#" target="_blank">more</a>
+        </section>
 
-      <section>
-        <img src="" alt="" />
-        <h3>Description</h3>
-        <a href="http://" target="_blank">more</a>
-      </section>
-      <section>
-        <img src="" alt="" />
-        <h3>Goals</h3>
-        <a href="http://" target="_blank">more</a>
-      </section>
-      <section>
-        <img src="" alt="" />
-        <h3>Rules</h3>
-        <a href="http://" target="_blank">more</a>
-      </section>
+        <section id="big-div" class="card">
+          <img class="cards-photo" src="./chameleon.png" alt="Reptiles" />
+          <h3>Reptiles</h3>
+          <a href="#" target="_blank">more</a>
+        </section>
+
+        <section id="big-div" class="card">
+          <img class="cards-photo" src="./starfish.png" alt="starfish" />
+          <h3>Starfish</h3>
+          <a href="#" target="_blank">more</a>
+        </section>
+      </div>
     </main>
-    <hr />
+
+    <div class="second-div">
+      <hr />
+    </div>
+
     <footer>
+      <img
+        id="footer-pic"
+        src="https://www.cdc.gov/healthypets/images/covid/dog-and-cat.jpg?_=46111"
+        alt="dog-and-cat"
+      />
       <section>
-        <h4>Designed by</h4>
+        <div id="div-1">
+          Designed by
+          <p id="my-name">Shirin Torkamandi</p>
+        </div>
+
         <ul>
-          <li><a href="#" target="_self">About Us</a></li>
-          <li><a href="#" target="_self">Contact Us</a></li>
+          <h4>Contact Info:</h4>
+          <li class="li-2"><a href="#" target="_blank">(434)971-9800</a></li>
+          <li class="li-2"><a href="#" target="_self">About Us</a></li>
+          <li class="li-2"><a href="#" target="_self">Contact Us</a></li>
         </ul>
-      </section>
-      <section>
+
         <details>
           <summary>
-            The websites that I get help from to make this website:
+            The websites that I got help from to make this website:
           </summary>
-          <a href="https://autumntrailsvet.com/best-pets-for-your-home/" target="_blank">for Appearance characteristics</a>
+          <a
+            href="https://autumntrailsvet.com/best-pets-for-your-home/"
+            target="_blank"
+            >for Appearance characteristics</a
+          >
           <br />
-          <a href="https://a-z-animals.com/blog/the-worlds-10-favorite-most-popular-animals/" target="_blank">for Table Structure</a>
+          <a
+            href="https://a-z-animals.com/blog/the-worlds-10-favorite-most-popular-animals/"
+            target="_blank"
+            >for Table Structure</a
+          >
         </details>
+
+        <label for="textarea">Tell us your Ideas:</label>
+        <textarea id="textarea" cols="30" rows="10"></textarea>
       </section>
     </footer>
   </body>
