I added a lot of folders & made 4 more pages

--- a/HomePage.html
+++ b/HomePage.html
@@ -13,21 +13,18 @@
     <nav class="nav">
       <ul>
         <li><a href="./HomePage.html" target="_self">Home</a></li>
-        <li><a href="#" target="_blank">Make Appointment</a></li>
+        <li><a href="./DogsPage.html" target="_self">Dogs</a></li>
         <li>
-          <a href="#" target="_blank">Order Food</a>
+          <a href="./RabbitsPage.html" target="_self">Rabbits</a>
         </li>
         <li>
-          <a href="#" target="_blank">Services</a>
+          <a href="./CatsPage.html" target="_self">Cats</a>
         </li>
         <li>
-          <a href="#" target="_blank">About</a>
+          <a href="./OrderFood.html" target="_self">Order Food</a>
         </li>
         <li>
-          <a href="#" target="_blank">Contact</a>
-        </li>
-        <li>
-          <a href="#" target="_blank">Forms</a>
+          <a href="#" target="_self">Services</a>
         </li>
       </ul>
     </nav>
